Correct picture spacing.

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -79,7 +79,7 @@ img.emma {
 	border: 2px solid;
 	height: 300px;
 	border-radius: 150px;
-	margin-top: -50px;
+	margin-top: 75px;
 	float: center;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
@@ -97,6 +97,7 @@ img.twitter {
 img.linkedin {
 	height: 75px;
 	margin-left: -150px;
+	margin-top: 10px;
 	float: center;
 }
 /*resize email img*/
